# libines2

./: CMakeLists.txt  README.md
include/iNES/: Error.h  Header.h  Rom.h
lib/: CMakeLists.txt  Header.cpp  Rom.cpp
lib/include/iNES/: Error.h  Header.h  Rom.h
src/: CMakeLists.txt  main.cpp
